Improve the current design of the landing page

--- a/src/pages/landing-page/landing-page.css
+++ b/src/pages/landing-page/landing-page.css
@@ -4,3 +4,10 @@
 .Paragraphs {
     text-align: center;
 }
+.landingPage-Elements{
+    width: 60rem;
+}
+.landingPage-Container{
+    display: flex;
+    justify-content: center;
+}
