--- a/src/pages/landing-page/landing-page.css
+++ b/src/pages/landing-page/landing-page.css
@@ -7,7 +7,11 @@
 .landingPage-Elements{
     width: 60rem;
 }
-.landingPage-Container{
+#Center{
     display: flex;
     justify-content: center;
+    min-height: 100%;
+}
+.landingPage-Container{
+    height: 100%;
 }
